--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,19 @@
     "background": {
         "scripts": ["background.js"]
     },
+    "page_action": {
+        "browser_style": true,
+        "default_icon": {
+            "19": "img/icon19.png",
+            "38": "img/icon38.png",
+            "48": "img/icon48.png",
+            "96": "img/icon96.png"
+        }
+    },
     "permissions": [
         "*://*.youtube.com/*",
+        "tabs",
+        "webNavigation",
         "webRequest",
         "webRequestBlocking"
     ],
