Add 128px icon.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -10,7 +10,8 @@
             "19": "img/icon19.png",
             "38": "img/icon38.png",
             "48": "img/icon48.png",
-            "96": "img/icon96.png"
+            "96": "img/icon96.png",
+            "128": "img/icon128.png"
         }
     },
     "permissions": [
@@ -24,7 +25,8 @@
         "19": "img/icon19.png",
         "38": "img/icon38.png",
         "48": "img/icon48.png",
-        "96": "img/icon96.png"
+        "96": "img/icon96.png",
+        "128": "img/icon128.png"
     },
     "applications": {
         "gecko": {"id": "youtubecinema@youtubecinema"}
